// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component::DataExport initial state hides the dataset radio buttons when there is no filter 1`] = `
<section
  className="export-modal"
>
  <div
    className="header layout-row"
  >
    <h3
      className="flex-all"
    >
      Export complaints
    </h3>
    <button
      className="a-btn a-btn__link"
      data-gtm_ignore="true"
      onClick={undefined}
    >
      Close
      <span
        className="cf-icon cf-icon-delete-round"
      />
    </button>
  </div>
  <div
    className="body"
  >
    <div
      className="body-copy instructions"
    >
      To download a copy of this dataset, choose the file format and which complaints you want to export below.
    </div>
    <div
      className="group"
    >
      <div
        className="group-title"
      >
        Select a format for the exported file
        <span
          className="required-helper"
        >
           (required)
        </span>
      </div>
      <div
        className="body-copy"
      >
        <div
          className="m-form-field m-form-field__radio m-form-field__lg-target"
        >
          <input
            checked={false}
            className="a-radio"
            id="format_csv"
            onChange={[Function]}
            type="radio"
            value="csv"
          />
          <label
            className="a-label"
            htmlFor="format_csv"
          >
            CSV
          </label>
        </div>
        <div
          className="m-form-field m-form-field__radio m-form-field__lg-target"
        >
          <input
            checked={false}
            className="a-radio"
            id="format_json"
            onChange={[Function]}
            type="radio"
            value="json"
          />
          <label
            className="a-label"
            htmlFor="format_json"
          >
            JSON
          </label>
        </div>
      </div>
      <div
        className="other-formats"
      >
        Or you can 
        <button
          className="a-btn a-btn__link"
          data-gtm_ignore="true"
          onClick={[Function]}
        >
          download the data in a different format
        </button>
        , if needed.
      </div>
    </div>
    <div
      className="timeliness-warning"
    >
      The export process could take several minutes if you're downloading many complaints
    </div>
  </div>
  <div
    className="footer layout-row"
  >
    <button
      className="a-btn"
      data-gtm_ignore="true"
      disabled={true}
      onClick={[Function]}
    >
      Start Export
    </button>
    <button
      className="a-btn a-btn__link a-btn__warning"
      data-gtm_ignore="true"
      onClick={undefined}
    >
      Cancel
    </button>
  </div>
</section>
`;

exports[`component::DataExport initial state renders without crashing 1`] = `
<section
  className="export-modal"
>
  <div
    className="header layout-row"
  >
    <h3
      className="flex-all"
    >
      Export complaints
    </h3>
    <button
      className="a-btn a-btn__link"
      data-gtm_ignore="true"
      onClick={undefined}
    >
      Close
      <span
        className="cf-icon cf-icon-delete-round"
      />
    </button>
  </div>
  <div
    className="body"
  >
    <div
      className="body-copy instructions"
    >
      To download a copy of this dataset, choose the file format and which complaints you want to export below.
    </div>
    <div
      className="group"
    >
      <div
        className="group-title"
      >
        Select a format for the exported file
        <span
          className="required-helper"
        >
           (required)
        </span>
      </div>
      <div
        className="body-copy"
      >
        <div
          className="m-form-field m-form-field__radio m-form-field__lg-target"
        >
          <input
            checked={false}
            className="a-radio"
            id="format_csv"
            onChange={[Function]}
            type="radio"
            value="csv"
          />
          <label
            className="a-label"
            htmlFor="format_csv"
          >
            CSV
          </label>
        </div>
        <div
          className="m-form-field m-form-field__radio m-form-field__lg-target"
        >
          <input
            checked={false}
            className="a-radio"
            id="format_json"
            onChange={[Function]}
            type="radio"
            value="json"
          />
          <label
            className="a-label"
            htmlFor="format_json"
          >
            JSON
          </label>
        </div>
      </div>
      <div
        className="other-formats"
      >
        Or you can 
        <button
          className="a-btn a-btn__link"
          data-gtm_ignore="true"
          onClick={[Function]}
        >
          download the data in a different format
        </button>
        , if needed.
      </div>
    </div>
    <div
      className="group"
    >
      <div
        className="group-title"
      >
        Select which complaints you'd like to export
        <span
          className="required-helper"
        >
           (required)
        </span>
      </div>
      <div
        className="body-copy"
      >
        <div
          className="m-form-field m-form-field__radio m-form-field__lg-target"
        >
          <input
            checked={false}
            className="a-radio"
            id="dataset_filtered"
            onChange={[Function]}
            type="radio"
            value="filtered"
          />
          <label
            className="a-label"
            htmlFor="dataset_filtered"
          >
            <div
              className="multiline-label"
            >
              <div>
                Filtered dataset (
                <span>
                  1,001
                </span>
                 complaints)
              </div>
              <div
                className="body-copy"
              >
                (only the results of the last search and/or filter)
              </div>
            </div>
          </label>
        </div>
        <div
          className="m-form-field m-form-field__radio m-form-field__lg-target"
        >
          <input
            checked={false}
            className="a-radio"
            id="dataset_full"
            onChange={[Function]}
            type="radio"
            value="full"
          />
          <label
            className="a-label"
            htmlFor="dataset_full"
          >
            <div
              className="multiline-label"
            >
              <div>
                Full dataset (
                <span>
                  9,999
                </span>
                 complaints)
              </div>
              <div
                className="body-copy"
              >
                (not recommended due to very large file size)
              </div>
            </div>
          </label>
        </div>
      </div>
    </div>
    <div
      className="timeliness-warning"
    >
      The export process could take several minutes if you're downloading many complaints
    </div>
  </div>
  <div
    className="footer layout-row"
  >
    <button
      className="a-btn"
      data-gtm_ignore="true"
      disabled={true}
      onClick={[Function]}
    >
      Start Export
    </button>
    <button
      className="a-btn a-btn__link a-btn__warning"
      data-gtm_ignore="true"
      onClick={undefined}
    >
      Cancel
    </button>
  </div>
</section>
`;
